--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header role="banner">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="Bootstrap to Wordpress"></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="Bootstrap to Wordpress"></a>
         <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,16 +33,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resources</a>
+              <a class="nav-link" href="resources.html">Resources</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -164,27 +164,27 @@
       </div>
 
       <div class="row text-center text-white">
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-computer"></i>
           <h4>Lifetime access to 80+ lectures</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-watch"></i>
           <h4>10+ hours of HD video content</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-calendar"></i>
           <h4>30-day money back guarantee</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-people"></i>
           <h4>Access to a community like-minded students</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-person"></i>
           <h4>Direct access to instructor</h4>
         </div>
-        <div class="col-sm-2">
+        <div class="col-6 col-md-4 col-lg-2">
           <i class="ci ci-phone"></i>
           <h4>Accessible content on your mobile devices</h4>
         </div>
@@ -222,7 +222,7 @@
       <div class="row justify-content-center">
         <div class="col-sm-8">
           <h2>Watch the Course Introduction</h2>
-          <!-- <iframe width="100%" height="415" src="https://www.youtube.com/embed/RmOB2vXyiy4" frameborder="0" allowfullscreen></iframe> -->
+          <iframe width="100%" height="415" src="https://www.youtube.com/embed/RmOB2vXyiy4" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
